# Lycosa

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Lycosa_Claude_Build_Playbook.md  Lycosa_Claude_Build_Playbook_v0.2.0.md  README.md  SECURITY.md
.claude/command/: CLAUDE.md  Lycosa_Claude_Build_Playbook_v0.3.0.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  tech-debt.yml
.github/workflows/: ci.yml  release.yml
agent/: README.md  pyproject.toml
agent/lycosa_agent/: client.py  config.py  discovery.py  executor.py  hwprofile.py  main.py  metrics.py
agent/lycosa_agent/runtimes/: base.py  ollama.py
agent/packaging/: lycosa-agent.service
agent/tests/: test_autoconfigure.py  test_client.py  test_discovery.py  test_executor.py  test_hwprofile.py  test_ollama.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core_entities.py  0002_node_registry.py  0003_node_recommendation.py  0004_heartbeat_agent.py  0005_tasks.py  0006_knowledge.py  0007_workflows.py
backend/app/: main.py  version.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  events.py  knowledge.py  me.py  nodes.py  recommendations.py  router.py  tasks.py  workflows.py
backend/app/core/: bootstrap.py  clientip.py  config.py  errors.py  events.py  leader.py  logging.py  loginguard.py  metrics.py  ratelimit.py  security.py  window_store.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  knowledge.py  node.py  task.py  user.py  workflow.py
backend/app/schemas/: apikey.py  auth.py  knowledge.py  node.py  recommendation.py  task.py  workflow.py
backend/app/services/: audit.py  auth.py  classifier.py  llm_recommendation.py  node.py  orchestrator.py  recommendation.py  scheduler.py  workflow.py
backend/app/services/knowledge/: embedder.py  ingestion.py  loader.py  router.py  store.py
backend/config/: llm_catalog.yml  recommendation_rules.yml
backend/scripts/: benchmark_embeddings.py  seed_admin.py
backend/tests/: __init__.py  conftest.py  test_api_key.py  test_api_keys.py  test_audit.py  test_auth_login.py  test_auth_logout.py  test_chunking_hashing.py  test_classifier.py  test_config_bootstrap.py  test_datetime_normalization.py  test_e2e_document_lifecycle.py  test_e2e_ingestion_recovery.py  test_embedding_benchmark.py  test_gateway.py  test_healthz.py  test_heartbeat.py  test_knowledge_delete.py  test_knowledge_ingest.py  test_knowledge_retrieve.py  test_llm_recommendation.py  test_loader_docx.py  test_loader_scanned_pdf.py  test_loader_structured.py  test_login_guard.py  test_multiworker.py  test_nodes_crud.py  test_nodes_register.py  test_observability.py  test_rbac.py  test_recommendation.py  test_recommendation_api.py  test_scheduler.py  test_task_knowledge.py  test_tasks_api.py  test_upload_concurrency.py  test_window_store.py  test_workflow_approval.py  test_workflow_definition.py  test_workflow_run.py
dashboard/: README.md  pubspec.yaml
dashboard/installers/windows/: lycosa.iss
dashboard/lib/: main.dart
dashboard/lib/core/: api_client.dart  api_exception.dart  app_info.dart  brand.dart  events.dart  profiles.dart  session.dart  theme_mode.dart
dashboard/lib/widgets/: lycosa_brand.dart
dashboard/linux/: CMakeLists.txt
dashboard/test/: add_node_url_test.dart  api_client_nodes_test.dart  api_client_tasks_test.dart  api_client_test.dart  app_version_test.dart  discovery_test.dart  events_test.dart  knowledge_admin_screens_test.dart  login_flow_test.dart  nodes_graph_view_test.dart  nodes_screen_test.dart  profiles_test.dart  tasks_workflows_screens_test.dart  theme_mode_test.dart
dashboard/windows/: CMakeLists.txt
docs/: AUDIT_v0.2.0.md  BACKLOG.md  DECISIONS.md  QA_capability_tests_2026-07-12.md  QA_v0.3.0.md  rag_embedding_benchmark.md
infra/: compose-defaults.env  docker-compose.yml
infra/prometheus/: alerts.yml  prometheus.yml
scripts/: README.md  file_v020_qa_issues.sh  install-agent.ps1  install-agent.sh  install.ps1  install.sh
(+26 files in other folders)
