[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lycosa-agent"
version = "0.1.0"
description = "Lycosa Local Agent — turns a device into a node in the Lycosa fabric"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psutil>=5.9",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "zeroconf>=0.132",
]

[project.scripts]
lycosa-agent = "lycosa_agent.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["lycosa_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
