[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lycosa-backend"
version = "0.3.0"
description = "Lycosa control plane — FastAPI services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pwdlib[argon2]>=0.2",
    "pyjwt>=2.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "prometheus-client>=0.20",
    "websockets>=12.0",
    "pypdf>=4.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
embeddings = ["fastembed>=0.3"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ASYNC", # flake8-async
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
